# api/openapi.yaml
@@ -64,7 +64,7 @@ paths:
       summary: Logout
       security:
         - cookieAuth: []
-        - csrfToken: [] # ← CSRF対策を使う場合のみ
+        - csrfToken: []
       responses:
         "302":
           description: Redirect to front-end after logout
@@ -96,6 +96,9 @@ paths:
       tags: [Users]
       summary: ユーザーの退会処理
       description: ユーザーデータとそのminkanデータを削除
+      security:
+        - cookieAuth: []
+        - csrfToken: []
       responses:
         "204":
           description: 正常に削除
@@ -121,6 +124,9 @@ paths:
       tags: [Minkan]
       summary: mindmap,kanban,作業中プロジェクトIDの新規登録
       description: 初ログイン時実行
+      security:
+        - cookieAuth: []
+        - csrfToken: []
       requestBody:
         description: 初期登録データ
         content:
@@ -142,6 +148,9 @@ paths:
     put:
       tags: [Minkan]
       summary: mindmap,kanban,作業中プロジェクトIDの更新
+      security:
+        - cookieAuth: []
+        - csrfToken: []
       requestBody:
         description: 更新用データ
         content:
